[package]
name = "styled-yew"
version = "0.1.2"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"
description = "Scoped css for Yew"
repository = "https://github.com/IcyDefiance/styled-yew"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = ["example"]

[dependencies]
lazy_static = "1.4.0"
stdweb = "0.4.20"

[workspace]
members = ["example"]
