[package]
name = "styled-yew"
version = "0.3.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"
description = "Scoped css for Yew"
repository = "https://github.com/IcyDefiance/styled-yew"
license = "MIT/Apache-2.0"
readme = "README.md"
exclude = ["example"]

[dependencies]
lazy_static = "1.4.0"
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3.46", features = ["CssStyleSheet", "Document", "Element", "HtmlHeadElement", "HtmlStyleElement", "StyleSheet"] }

[workspace]
members = ["example"]
