[package]
name = "example"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
stdweb = "0.4.20"
styled-yew = { path = "..", version = "0.1.0" }
wasm-bindgen = "0.2.58"
yew = { git = "https://github.com/jstarry/yew", branch = "fix-mounted-order" }
